add car logic
